// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterNavHeader component renders default footer correctly 1`] = `
<Styled(BodyCopy)
  aria-label="ABCD"
  className="footer-nav-header1"
  color="text.primary"
  component="p"
  data-index={2}
  data-locator="col_heading_2"
  fontFamily="secondary"
  fontSize="fs16"
  fontWeight="semibold"
  letterSpacing="normal"
  lineHeight="normal"
  link={Object {}}
  textAlign="left"
>
  Title
</Styled(BodyCopy)>
`;

exports[`FooterNavHeader component renders image in header variation correctly 1`] = `
<Styled(Anchor)
  className="footer-nav-header img-link"
  dataLocator="col_heading_3"
  to=""
>
  <Styled(Image) />
</Styled(Anchor)>
`;

exports[`FooterNavHeader component renders subheader variation correctly 1`] = `
<Styled(BodyCopy)
  aria-label="ABCD"
  className="footer-nav-header2 subHeader"
  color="text.primary"
  component="p"
  data-index={4}
  data-locator="col_heading_4"
  fontFamily="secondary"
  fontSize="fs16"
  fontWeight="semibold"
  letterSpacing="normal"
  lineHeight="normal"
  link={Object {}}
  textAlign="left"
>
  Title
</Styled(BodyCopy)>
`;
